// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> snapshots rendered with title and subtitle 1`] = `
<div
  className="coup-Content"
>
  <p
    className="coup-Content__text coup-Content__title"
  >
    Food
  </p>
  <p
    className="coup-Content__text coup-Content__subtitle"
  >
    Tastes goood
  </p>
</div>
`;

exports[`<Content /> snapshots rendered with title, subtitle and tagline 1`] = `
<div
  className="coup-Content"
>
  <p
    className="coup-Content__text coup-Content__title"
  >
    Food
  </p>
  <p
    className="coup-Content__text coup-Content__subtitle coup-Content__subtitle--is-bold"
  >
    Tastes goood
  </p>
  <p
    className="coup-Content__text coup-Content__tagline"
  >
    yupp
  </p>
</div>
`;
